--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -32,3 +32,23 @@ ul li {
 	margin-bottom: 0.8rem;
 }
 
+.footer-row {
+	--bs-gutter-x: .5rem;
+	--bs-gutter-y: 0;
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: calc(-1 * var(--bs-gutter-y));
+	/* margin-right: calc(-0.5 * var(--bs-gutter-x)); */
+	/* margin-left: calc(-0.5 * var(--bs-gutter-x)); */
+}
+.footer-row > * {
+	flex-shrink: 0;
+	max-width: 100%;
+	/* padding-right: calc(var(--bs-gutter-x) * 0.5); */
+	/* padding-left: calc(var(--bs-gutter-x) * 0.5); */
+	margin-top: var(--bs-gutter-y);
+}
+.footer-spacer {
+	margin-left: 0.8rem;
+	margin-right: 0.8rem;
+}
