--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -52,3 +52,15 @@ ul li {
 	margin-left: 0.8rem;
 	margin-right: 0.8rem;
 }
+
+@media (min-width: 1200px) {
+	h3, .h3 {
+		font-size: 1.4rem;
+	}
+}
+
+@media (min-width: 1200px) {
+	h4, .h4 {
+		font-size: 1.3rem;
+	}
+}
